@@ -85,6 +85,7 @@
 #define LIG_ENVS "LIGFONTS", "TEXFONTS"
 #define TEXMFSCRIPTS_ENVS "TEXMFSCRIPTS"
 #define LUA_ENVS "LUAINPUTS"
+#define CLUA_ENVS "CLUAINPUTS"
 #define FONTFEATURES_ENVS "FONTFEATURES"
 #define FONTCIDMAPS_ENVS "FONTCIDMAPS"
 #define MLBIB_ENVS "MLBIBINPUTS", BIB_ENVS
@@ -775,6 +776,12 @@ kpathsea_init_format (kpathsea kpse, kpse_file_format_type format)
       INIT_FORMAT ("mlbst", DEFAULT_MLBSTINPUTS, MLBST_ENVS);
 #define MLBST_SUFFIXES ".mlbst", ".bst"
       SUFFIXES (MLBST_SUFFIXES);
+      FMT_INFO.suffix_search_only = true;
+      break;
+    case kpse_clua_format:
+      INIT_FORMAT ("clua", DEFAULT_CLUAINPUTS, CLUA_ENVS);
+#define CLUA_SUFFIXES ".dll", ".so"
+      SUFFIXES (CLUA_SUFFIXES);
       FMT_INFO.suffix_search_only = true;
       break;
     default:
